# proj-data-mining

./: Makefile  README.md  main.py  pyproject.toml
models/: agg_clustering_model.joblib  dbscan_model.joblib  kmeans_model.joblib  scaler.joblib
notebooks/: customer_segmentation_analysis.ipynb
proj_data_mining_northwind/: __init__.py  dataset.py  features.py  plots.py
proj_data_mining_northwind/modeling/: predict.py  train.py
