[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "proj_data_mining_northwind"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Romulo Cibien" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "loguru",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["proj_data_mining_northwind"]
include = ["pyproject.toml", "proj_data_mining_northwind/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["proj_data_mining_northwind"]
force-sort-within-sections = true

